@@ -232,7 +232,6 @@ static int _daemon_read(struct dm_event_fifos *fifos,
 	size_t size = 2 * sizeof(uint32_t);	/* status + size */
 	uint32_t *header = alloca(size);
 	char *buf = (char *)header;
-	struct stat fstatbuf;
 
 	while (bytes < size) {
 		for (i = 0, ret = 0; (i < 20) && (ret < 1); i++) {
@@ -246,11 +245,8 @@ static int _daemon_read(struct dm_event_fifos *fifos,
 				log_error("Unable to read from event server");
 				return 0;
 			}
-			/* Check whether fifo is still alive */
-			if ((ret == 0) &&
-			    fstat(fifos->server + 1, &fstatbuf) &&
-			    (errno == EBADF)) {
-				log_error("Fifo fd is bad for event server.");
+			if ((ret == 0) && i && !bytes) {
+				log_error("No input from event server.");
 				return 0;
 			}
 		}
